--- a/PEOPLE/TEAM/david.html
+++ b/PEOPLE/TEAM/david.html
@@ -9,5 +9,6 @@
 <body>
     <h1>David Gees</h1>
     <h2>Biografie</h2>
+    <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat aperiam laudantium qui sed! Aliquid, quisquam maxime ullam alias asperiores rerum commodi obcaecati aliquam animi sapiente, accusamus nam, non nisi rem?</h2>
 </body>
 </html>
