index link david tryout

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <h2>People</h2>
         <h3>Team</h3>
-            <a href="../People/Team/david.html">David</a>
+            <a href="../websiteportfolio/PEOPLE/TEAM/david.html">David</a>
             <br>
             <a href="../People/Team/joelle.html">Joëlle</a>
             <br>
