index new link people

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <h3>Team</h3>
             <a href="../websiteportfolio/PEOPLE/TEAM/david.html">David</a>
             <br>
-            <a href="../People/Team/joelle.html">Joëlle</a>
+            <a href="../websiteportfolio/PEOPLE/TEAM/joelle.html">Joëlle</a>
             <br>
-            <a href="../People/Team/yeinou.html">Yèinou</a>
+            <a href="../websiteportfolio/PEOPLE/TEAM/yeinou.html">Yèinou</a>
 
     <h2>Project Documentation</h2>
         <h3>PR</h3>
