--- a/index.html
+++ b/index.html
@@ -19,33 +19,33 @@
 
     <h2>Project Documentation</h2>
         <h3>PR</h3>
-            <a href="../Project Documentation/PR/FL_flyer.html">FL_flyer</a>
+            <a href="../websiteportfolio/PROJECT DOCUMENTATION/PR/FL_werbematerial.html">FL_flyer</a>
         <h3>Script</h3>
-            <a href="../Project Documentation/Script/FL_script2023.html">FL_script2023</a> 
+            <a href="../websiteportfolio/PROJECT DOCUMENTATION/SCRIPT/FL_script2023.html">FL_script2023</a> 
             <br>
-            <a href="../Project Documentation/Script/FL_script2024.html">FL_script2024</a>
+            <a href="../websiteportfolio/PROJECT DOCUMENTATION/SCRIPT/FL_script2024.html">FL_script2024</a>
         <h3>Text</h3>
-            <a href="../Project Documentation/Text/FL_erschaffungtext.html">FL_erschaffungtext</a>
+            <a href="../websiteportfolio/PROJECT DOCUMENTATION/TEXT/FL_erschaffungtext.html">FL_erschaffungtext</a>
             <br>
-            <a href="../Project Documentation/Text/FL_yeinoutext.html">FL_yeinoutext</a>
+            <a href="../websiteportfolio/PROJECT DOCUMENTATION/TEXT/FL_yeinoutext.html">FL_yeinoutext</a>
             <br>
-            <a href="../Project Documentation/Text/FL_endetext.html">FL_endetext</a>
+            <a href="../websiteportfolio/PROJECT DOCUMENTATION/TEXT/FL_endetext.html">FL_endetext</a>
         <h3>Sound</h3>
-            <a href="../Project Documentation/Sound/FL_sound.html">FL_sound</a>
+            <a href="../websiteportfolio/PROJECT DOCUMENTATION/SOUND/FL_sound.html">FL_sound</a>
         <h3>Video</h3>
-            <a href="../Project Documentation/Video/FL_erschaffungvideo.html">FL_erschaffungvideo</a>
+            <a href="../websiteportfolio/PROJECT DOCUMENTATION/VIDEO/FL_erschaffungvideo.html">FL_erschaffungvideo</a>
             <br>
-            <a href="../Project Documentation/Video/FL_endevideo.html">FL_endevideo</a>
+            <a href="../websiteportfolio/PROJECT DOCUMENTATION/VIDEO/FL_endevideo.html">FL_endevideo</a>
 
     <h2>Process Documentation</h2>
         <h3>Rehearsals</h3>
-            <a href="../Process Documentation/Rehearsals/FL_rotefabrikvideos.html">rotefabrikvideos</a>
+            <a href="../websiteportfolio/PROCESS DOCUMENTATION/REHEARSALS/FL_rotefabrikvideos.html">rotefabrikvideos</a>
         <h3>Trips</h3>
-            <a href="../website*portfolio/Process Documentation/Trips/FL_gotthard.html">FL_gotthard</a>
+            <a href="../websiteportfolio/PROCESS DOCUMENTATION/TRIPS/FL_gotthard.html">FL_gotthard</a>
     <h2>Research</h2>
         <h3>Monster Theory</h3>
-            <a href="../Research/Monster Theory/monsterculturetheses.html">monsterculturetheses</a>
+            <a href="../websiteportfolio/RESEARCH/MONSTER THEORY/monsterculturetheses.html">monsterculturetheses</a>
         <h3>New Materialism</h3>
-            <a href="../Research/New Materialism/meetingtheuniversehalfway.html">meetingtheuniversehalfway</a>
+            <a href="../websiteportfolio/RESEARCH/NEW MATERIALISM/meetingtheuniversehalfway.html">meetingtheuniversehalfway</a>
 </body>
 </html>
