fill content people, process, research

--- a/PEOPLE/TEAM/david.html
+++ b/PEOPLE/TEAM/david.html
@@ -4,11 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Bio David</title>
+    <link rel="stylesheet" href="stylepeople.css">
 </head>
+
 <body>
-    <h1>David Gees</h1>
-    <h2>Biografie</h2>
-    <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat aperiam laudantium qui sed! Aliquid, quisquam maxime ullam alias asperiores rerum commodi obcaecati aliquam animi sapiente, accusamus nam, non nisi rem?</h2>
+
+    <div class="Title">
+        <h1>David Gees</h1>
+        <p>(*2002 in Zürich, keine/er), Co-Regie</p>
+    </div>   
+
+
+    <div class="grid-container"> 
+
+        <img src="Fotos/David.png" alt="Photo of David">
+
+        <p class="text_de"><b>de</b><br> 
+            Verbringt nach dem Abschluss ein Jahr am Schauspielhaus Zürich (Theaterjahr 2020/21). Arbeitet seither zwischen Zürich und Wien. Als Regieassistenz unter anderem am Theater Nestroyhof Hamakom («Bent», 2022) und dem Schauspielhaus Wien («Die Zukunft reicht (noch immer) nicht», 2023) sowie als Regie bei den Produktionen «Nichts oder Null» (2021) am Schauspielhaus Zürich, «Daddy's favourite: Monsta Energy: a fairytale» (2023) im Spektakel Wien sowie «Frankenstein Lost» (2023/24) in Basel mit Gastspielen in der Zentralwäscherei Zürich und am Schauspielhaus Zürich.
+        </p>
+
+        <p class="text_eng"><b>eng</b><br>
+            After graduating, spends a year at the Schauspielhaus Zurich (Theaterjahr 2020/21). Has since worked between Zurich and Vienna. As assistant director at Theater Nestroyhof Hamakom ("Bent", 2022) and Schauspielhaus Wien ("Die Zukunft reicht (noch immer) nicht", 2023) as well as directing the productions "Nichts oder Null" (2021) at Schauspielhaus Zürich, "Daddy's favorite: Monsta Energy: a fairytale" (2023) at Spektakel Wien and "Frankenstein Lost" (2023/24) in Basel with guest performances at Zentralwäscherei Zürich and Schauspielhaus Zürich.
+        </p>
+    </div>
+   
 </body>
 </html>
