--- a/PEOPLE/TEAM/joelle.html
+++ b/PEOPLE/TEAM/joelle.html
@@ -3,9 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Bio Joëlle</title>
+    <link rel="stylesheet" href="stylepeople.css">
 </head>
 <body>
-    <h1>Joëlle Antonie Gbeassor</h1>
+
+    <div class="Title">
+        <h1>Joëlle Antonie Gbeassor</h1>
+        <p>(*2001 außerhalb Zürich, sie/ihr), Co-Regie</p>
+    </div>    
+
+   
+    
+    <div class="grid-container"> 
+
+        <img src="Fotos/Joelle.jpeg" alt="Photo of Joelle">
+
+        <p class="text_de"><b>de</b><br> 
+            Lebt zwischen Zürich und Wien. Arbeitet als freischaffende Produktionsleitung und Regisseurin. Die Theaterarbeit hat sie zufällig gepackt, als sie Teil des Theaterjahrs 2020/21 am Schauspielhaus Zürich war. Anschliessend arbeitete sie als Produktionsleitung bei den Projekten «Wer hat Angst vorm weißen Mann?» (2022) und «Beauty Salon» (2024/25), sowie als Regieassistenz am Théâtre Vidy-Lausanne («Wasted Land», 2024).<br>
+            Als Regisseurin realisierte sie die kollektiven Arbeiten «Nichts oder Null» (2021) am Schauspielhaus Zürich, «Daddy's favourite: Monsta Energy: a fairytale» (2023) im Spektakel Wien und «Frankenstein Lost» (2023/24) in Basel mit Gastspielen in der Zentralwäscherei Zürich und am Schauspielhaus Zürich. 
+        </p>
+
+        <p class="text_eng"><b>eng</b><br>
+            Lives in between Zurich and Vienna. Works as a independent production manager and director. Her interest in theater work was sparked when she was part of the 2020/21 Theater Year at Schauspielhaus Zürich. She then worked as a production manager on the projects "Wer hat Angst vorm weißen Mann?" (2022) and "Beauty Salon" (2024/25), as well as assistant director at Théâtre Vidy-Lausanne ("Wasted Land", 2024). <br>
+            As a director, she realized the collective works "Nichts oder Null" (2021) at Schauspielhaus Zürich, "Daddy's favourite: Monsta Energy: a fairytale" (2023) at Spektakel Wien and "Frankenstein Lost" (2023/24) in Basel with guest performances at Zentralwäscherei Zürich and Schauspielhaus Zürich. 
+        </p>
+</div>
 </body>
 </html>
