--- a/RESEARCH/MONSTER THEORY/monsterculturetheses.html
+++ b/RESEARCH/MONSTER THEORY/monsterculturetheses.html
@@ -5,8 +5,56 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <h1>Monster Culture (Seven Theses)</h1>
+    <h2>by Jeffrey Jerome Cohen</h2>
+
+    <embed src="jeffrey-jerome-cohen-monster-culture-seven-theses.pdf" width="100px" height="200px" 
+    type="application/pdf">
+
+    <div class="theory_text">
+        <h3>Summary</h3>
+         <p>
+            This essay from the Book: «Monster Theory: Reading Culture» (1996) is essential for understanding the concept of monsters and their significance in literature, culture, and society. It provides a framework for analyzing monsters beyond their physical appearance, delving into their cultural, psychological, and symbolic dimensions and places of origin.
+            <br><br>
+            By engaging with Cohen's seven theses, the theater play «Frankenstein Lost» deepens the exploration of themes addressed in Mary Shelleys book «Frankenstein: or 'The Modern Prometheus'» such as:<br><br>
+            - the Nature of Monstrosity, challenging the binary and simplistic notion of good and evil,<br>
+            - the complex relationship between creator and creation,<br>
+            - social consequences of othering, alienation, marginalization and exclusion and the possible responses of individuals, be this the quest for acceptance and belonging, (revenge) fantasies, or dreams,<br>
+            - the exercise of power and control over the natural world and its consequences,<br>
+            - the role of fear and prejudice in shaping violent human attitudes towards the monstrous, and the role of sympathy and empathy as counter-approach to violence,<br>
+            - or the uncanny and the unknown. <br><br>
+            and invites the you to reflect on the ways in which societal norms and power dynamics shape perceptions of identity and otherness.
+         </p>
+
+        <h3>Cohen's Seven Theses</h3>
+        <p>
+            01. "The monster's body is pure culture. A construct and a projection, the monster exists only to be read"<br>
+            02. "The monster always escapes"<br>
+            03. "The monster is the harbinger of category crisis"<br>
+            04. "The monster dwells at the gates of difference"<br>
+            05. "The monster polices the borders of the possible"<br>
+            06. "Fear of the monster is really a kind of desire"<br>
+            07. "The monster stands at the threshold ... of becoming"
+        </p>
+
+        <h3>Quotes</h3>
+        <p>
+            «Vampires, burial, death: inter the corpse where the road forks, so that when it springs from the grave, it will not know which path to follow. Drive a stake through its heart: it will be stuck to the ground at the fork, it will haunt that place that leads to many other places, that point of indecision. Behead the corpse, so that, acephalic, it will not know itself as subject, only as pure body.» 
+            <a href=""></a>(Cohen, 2018, p. 4)
+        </p>
+        <p>
+            «monstrous interpretation is as much process as epiphany, a work that must content itself with fragments (footprints, bones, talismans, teeth, shadows, obscured glimpses—signifiers of monstrous passing that stand in for the monstrous body itself).» 
+            (Cohen, 2018, p. 6)
+        </p>
+        <p>
+            «In the face of the monster, scientific inquiry and its ordered rationality crumble. The monstrous is a genus too large to be encapsulated in any conceptual system; the monster's very existence is a rebuke to boundary and enclosure; like the giants of Mandeville's Travels, it threatens to devour "all raw & quyk" any thinker who insists otherwise. The monster is in this way the living embodiment of the phenomenon Derrida has famously labeled the "supplement" (ce dangereux supplement):11 it breaks apart bifurcating, "either/or" syllogistic logic with a kind of reasoning closer to "and/or," introducing what Barbara Johnson has called "a revolution in the very logic of meaning".» (Cohen, 2018, p. 7)
+        </p>
+    </div>
+
+
+
 </body>
 </html>
