--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
             <a href="../websiteportfolio/PEOPLE/TEAM/joelle.html">Joëlle</a>
             <br>
             <a href="../websiteportfolio/PEOPLE/TEAM/yeinou.html">Yèinou</a>
+            <br>
+            <a href="../websiteportfolio/PEOPLE/TEAM/salome.html">Salome</a>
 
     <h2>Project Documentation</h2>
         <h3>PR</h3>
@@ -39,7 +41,7 @@
 
     <h2>Process Documentation</h2>
         <h3>Rehearsals</h3>
-            <a href="../websiteportfolio/PROCESS DOCUMENTATION/REHEARSALS/FL_rotefabrikvideos.html">rotefabrikvideos</a>
+            <a href="../websiteportfolio/PROCESS DOCUMENTATION/REHEARSALS/FL_rotefabrikvideos/FL_rotefabrikvideos.html">rotefabrikvideos</a>
         <h3>Trips</h3>
             <a href="../websiteportfolio/PROCESS DOCUMENTATION/TRIPS/FL_gotthard.html">FL_gotthard</a>
     <h2>Research</h2>
