--- a/PROCESS DOCUMENTATION/REHEARSALS/FL_rotefabrikvideos/FL_rotefabrikvideos.html
+++ b/PROCESS DOCUMENTATION/REHEARSALS/FL_rotefabrikvideos/FL_rotefabrikvideos.html
@@ -11,13 +11,13 @@
     <h1>Rehearsals Frankenstein Lost at Rote Fabrik Zürich</h1>
 
     <video width="100%" height="auto" controls autoplay loop muted>
-        <source src="speedup_probevibes.MP4" type=video/mp4>
+        <source src="small_speedup_probevibes.mp4" type=video/mp4>
       </video>
 
     <p>The first rehearsal week for the play "Frankenstein Lost" takes place at the beginning of August 2023. The video shows how we prepare for an impovised performance by 
         <a href="../../../../websiteportfolio/PEOPLE/TEAM/salome.html">Salome Immoos</a>.
     </p>
 
-    
+
 </body>
 </html>
