--- a/PEOPLE/TEAM/salome.html
+++ b/PEOPLE/TEAM/salome.html
@@ -18,7 +18,7 @@
     
     <div class="grid-container"> 
 
-        <img src="Fotos/Salome.png" alt="Photo of Salome">
+        <img src="Fotos/Salome2.jpeg" alt="Photo of Salome">
 
         <p class="text_de"><b>de</b><br> 
             Salome ist freischaffende Schauspielerin und Physical Theatre Artist und hat unter anderem bei den Produktionen «Nichts oder Null» (2021) am Schauspielhaus Zürich, «Die Rote Zora und ihre Bande» (2021) am Theater Basel (Regie: Patrick Oes), «OH ROMEO?!» (2022) am Theater Marie Aarau (Regie: Rebekka Bangerter), «Stürmen» (2023) am Theater Basel (Regie: Salomé Im Hof), «Frankenstein Lost» (2023, Regie: Joëlle Gbeassor und David Gees) und «UM KOPF UND KRAGEN» (2023) am Jungen Theater Basel (Regie: Hannah Biedermann) mitgespielt.
