--- a/PEOPLE/TEAM/yeinou.html
+++ b/PEOPLE/TEAM/yeinou.html
@@ -17,7 +17,7 @@
     
     <div class="grid-container"> 
 
-        <img src="Fotos/Yeinou.png" alt="Photo of Yeinou">
+        <img src="Fotos/Yeinou2.jpeg" alt="Photo of Yeinou">
 
         <p class="text_de"><b>de</b><br> 
             Yèinou ist freischaffende:r Performance-Künstler:in und Schauspieler:in. Am Schauspielhaus Zürich hat Yèinou bei fünf Produktionen mitgespielt; High on «Hope«, «Bullestress«, «Ich chan es Zündhölzli ahzünde« (Regie: Suna Gürler) sowie «Pinocchio» und «Der Sturm» (Regie: Wu Tsang). Daneben macht Yèinou Musik in der Band Manic Pixxies und probt aktuell für die nächste Produktion «Last Night a DJ took my Life» (Regie: Joana Tischkau).
