--- a/index.html
+++ b/index.html
@@ -22,21 +22,22 @@
     <h2>Project Documentation</h2>
         <h3>PR</h3>
             <a href="../websiteportfolio/PROJECT DOCUMENTATION/PR/FL_werbematerial.html">FL_flyer</a>
+
         <h3>Script</h3>
-            <a href="../websiteportfolio/PROJECT DOCUMENTATION/SCRIPT/FL_script2023.html">FL_script2023</a> 
+            <a href="../websiteportfolio/PROJECT DOCUMENTATION/SCRIPT/FL_script2023/FL_script2023.html">FL_script2023</a> 
             <br>
-            <a href="../websiteportfolio/PROJECT DOCUMENTATION/SCRIPT/FL_script2024.html">FL_script2024</a>
+            <a href="../websiteportfolio/PROJECT DOCUMENTATION/SCRIPT/FL_script2024/FL_script2024.html">FL_script2024</a>
+
         <h3>Text</h3>
-            <a href="../websiteportfolio/PROJECT DOCUMENTATION/TEXT/FL_erschaffungtext.html">FL_erschaffungtext</a>
-            <br>
-            <a href="../websiteportfolio/PROJECT DOCUMENTATION/TEXT/FL_yeinoutext.html">FL_yeinoutext</a>
-            <br>
+            <a href="../websiteportfolio/PROJECT DOCUMENTATION/TEXT/FL_erschaffungtext.html">FL_erschaffungtext</a><br>
+            <a href="../websiteportfolio/PROJECT DOCUMENTATION/TEXT/FL_yeinoutext.html">FL_yeinoutext</a><br>
             <a href="../websiteportfolio/PROJECT DOCUMENTATION/TEXT/FL_endetext.html">FL_endetext</a>
+        
         <h3>Sound</h3>
             <a href="../websiteportfolio/PROJECT DOCUMENTATION/SOUND/FL_sound.html">FL_sound</a>
+        
         <h3>Video</h3>
-            <a href="../websiteportfolio/PROJECT DOCUMENTATION/VIDEO/FL_erschaffungvideo.html">FL_erschaffungvideo</a>
-            <br>
+            <a href="../websiteportfolio/PROJECT DOCUMENTATION/VIDEO/FL_erschaffungvideo.html">FL_erschaffungvideo</a><br>
             <a href="../websiteportfolio/PROJECT DOCUMENTATION/VIDEO/FL_endevideo.html">FL_endevideo</a>
 
     <h2>Process Documentation</h2>
@@ -49,5 +50,8 @@
             <a href="../websiteportfolio/RESEARCH/MONSTER THEORY/monsterculturetheses.html">monsterculturetheses</a>
         <h3>New Materialism</h3>
             <a href="../websiteportfolio/RESEARCH/NEW MATERIALISM/meetingtheuniversehalfway.html">meetingtheuniversehalfway</a>
+        <h3>Epistemology</h3>
+        <a href="../websiteportfolio/RESEARCH/EPISTEMOLOGY/feeling_lost.html">the-wisdom-of-feeling-lost</a>
+
 </body>
 </html>
