--- a/PEOPLE/TEAM/david.html
+++ b/PEOPLE/TEAM/david.html
@@ -18,7 +18,7 @@
 
     <div class="grid-container"> 
 
-        <img src="Fotos/David.png" alt="Photo of David">
+        <img src="Fotos/David2.jpeg" alt="Photo of David">
 
         <p class="text_de"><b>de</b><br> 
             Verbringt nach dem Abschluss ein Jahr am Schauspielhaus Zürich (Theaterjahr 2020/21). Arbeitet seither zwischen Zürich und Wien. Als Regieassistenz unter anderem am Theater Nestroyhof Hamakom («Bent», 2022) und dem Schauspielhaus Wien («Die Zukunft reicht (noch immer) nicht», 2023) sowie als Regie bei den Produktionen «Nichts oder Null» (2021) am Schauspielhaus Zürich, «Daddy's favourite: Monsta Energy: a fairytale» (2023) im Spektakel Wien sowie «Frankenstein Lost» (2023/24) in Basel mit Gastspielen in der Zentralwäscherei Zürich und am Schauspielhaus Zürich.
