--- a/dramaj_websiteportfolio/menu.html
+++ b/dramaj_websiteportfolio/menu.html
@@ -7,14 +7,13 @@
     <title>dramaj</title>
     <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
     <div class="background"></div>
-    <h1>DRAMAJ</h1>
-
-    <div id="output">
+    <h1>MENU</h1>
+    <div class="buttonLink_large">
+        <a href="list.html">INDEX</a>
+        <a href="tale.html">GAME MODE</a>
     </div>
 
-    <script src="index.js"></script>
 </body>
 </html>
