--- a/dramaj_websiteportfolio/tale.html
+++ b/dramaj_websiteportfolio/tale.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-       <link rel="stylesheet" href="style2.css">
+    <link rel="stylesheet" href="style2.css">
+    <style>
+        p, a {
+            opacity: 0;
+            transition: opacity 1s ease-in-out;
+        }
+    </style>
 </head>
-
 <body>
     <p id="para1">Do you remember the first moments of your existence?</p>
     <p id="para2">No?</p>
