--- a/dramaj_websiteportfolio/body.html
+++ b/dramaj_websiteportfolio/body.html
@@ -5,33 +5,64 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Body</title>
     <link rel="stylesheet" href="style2.css">
+    <style>
+        p, a {
+            opacity: 0;
+            transition: opacity 1s ease-in-out;
+        }
+    </style>
 </head>
 <body>
 
-<audio id="background-music" src="3_Toma Toma Final_mixdown.mp3" loop autoplay>
+<audio id="background-music" src="3_Toma Toma Final_mixdown.mp3" loop>
     Your browser does not support the audio element.
 </audio>
+
+<p id="intro-paragraph">Please, interact with the page for a full experience.</p>
+
+<a id="efeu-link" href="efeu.html">Efeu</a>
+<a id="abscheu-link" href="abscheu.html">Abscheu</a>
+<a id="fanboy-link" href="fanboy.html">Fanboy</a>
 
 <script>
     const audio = document.getElementById('background-music');
     audio.volume = 0.1;  // Adjust the volume as needed
 
+    document.addEventListener('click', function startAudio() {
+        if (audio.paused) {
+            audio.play();
+        }
+
+        // Show the paragraph after 1 second
+        setTimeout(() => {
+            const paragraph = document.getElementById('intro-paragraph');
+            paragraph.style.opacity = 1;
+        }, 1000);
+
+        // Show the links relative to when the user interacts
+        showLink('efeu-link', 10000); 
+        showLink('abscheu-link', 11000);
+        showLink('fanboy-link', 12000);
+
+        // Remove the event listener after it has been triggered
+        document.removeEventListener('click', startAudio);
+    });
+
     function showLink(id, delay) {
         setTimeout(() => {
-            document.getElementById(id).style.display = 'inline';
+            const link = document.getElementById(id);
+            link.style.display = 'inline';
+            link.style.opacity = 1;
         }, delay);
     }
 
     window.onload = function() {
-        showLink('efeu-link', 10000); 
-        showLink('abscheu-link', 11000);
-        showLink('fanboy-link', 12000);
+        // Initially hide the links
+        document.getElementById('efeu-link').style.display = 'none';
+        document.getElementById('abscheu-link').style.display = 'none';
+        document.getElementById('fanboy-link').style.display = 'none';
     };
 </script>
-
-<a id="efeu-link" href="efeu.html" style="display:none;">Efeu</a>
-<a id="abscheu-link" href="abscheu.html" style="display:none;">Abscheu</a>
-<a id="fanboy-link" href="fanboy.html" style="display:none;">Fanboy</a>
 
 </body>
 </html>
