--- a/dramaj_websiteportfolio/erschaffung_2.html
+++ b/dramaj_websiteportfolio/erschaffung_2.html
@@ -15,7 +15,7 @@
         }
 
         #para8, #para9 {
-            color: rgb(3, 0, 109);        
+            color:#CCFF00;
         }
     </style>
 </head>
