--- a/dramaj_websiteportfolio/gotthard.html
+++ b/dramaj_websiteportfolio/gotthard.html
@@ -5,8 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>dramaj</title>
-<<<<<<< Updated upstream
-
+<link rel="stylesheet" href="style2.css">
     <style>
         #gotthardVideo {
             margin: none; 
@@ -25,6 +24,7 @@
             display: none;
         }
 
+        
     </style>
 </head>
 
@@ -47,9 +47,8 @@
 }
 
     // Call the showText function after 40 seconds
-    setTimeout(showText, 10000);
+    setTimeout(showText, 40000);
 </script>
-=======
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -58,6 +57,5 @@
           <source src="gotthardVideo.MOV" type="video/quicktime">
         </video>
       </div>
->>>>>>> Stashed changes
 </body>
 </html>
