--- a/dramaj_websiteportfolio/list.html
+++ b/dramaj_websiteportfolio/list.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index</title>
-    <link rel="stylesheet" href="/dramaj-Game/websiteportfolio.css">
+    <link rel="stylesheet" href="style.css">
 
     <style>
-      @import url(https://fonts.googleapis.com/css2?family=Jacquard+12&family=Jacquard+12+Charted&display=swap);
+
 
 
 title {
@@ -88,14 +88,17 @@ title {
     </style>
 </head>
 <body>
-    
-  <div class="title">
-    <h1>INDEX</h1>
-  </div>
-
-</select>
-<a href="start.html">game</a>
-<a href="index.html">index</a>
+<div class="buttons">
+  <button type="button">
+      <a href="list.html">INDEX</a>
+  </button>
+  <button type="button">
+      <a href="tale.html">GAME</a>
+  </button>
+  <button type="button">
+      <a href="about.html">ABOUT</a>
+  </button>
+</div>
 
   <table>
     <tr>
