--- a/dramaj_websiteportfolio/menu.html
+++ b/dramaj_websiteportfolio/menu.html
@@ -9,10 +9,16 @@
 </head>
 <body>
     <div class="background"></div>
-    <h1>MENU</h1>
-    <div class="buttonLink_large">
-        <a href="list.html">INDEX</a>
-        <a href="tale.html">GAME MODE</a>
+    <div class="buttons">
+        <button type="button">
+            <a href="list.html">INDEX</a>
+        </button>
+        <button type="button">
+            <a href="tale.html">GAME</a>
+        </button>
+        <button type="button">
+            <a href="about.html">ABOUT</a>
+        </button>
     </div>
 
 </body>
