--- a/dramaj_websiteportfolio/tale.html
+++ b/dramaj_websiteportfolio/tale.html
@@ -16,9 +16,11 @@
     <p id="para2">No?</p>
     <p id="para3">Listen to your tale; if you have heard that, abandon or commiserate me, as you shall judge that I deserve. But hear me.</p>
 
+    <div class="talelinks">
     <a id="link1" href="erschaffung_1.html">hear your tale</a>
     <a id="link2" href="erschaffung_2.html">hear another monster's tale</a>
     <a id="link3" href="gotthard.html">sit upon a rock that overlooks a sea of ice</a>
+    </div>
 
     <script>
         document.addEventListener("DOMContentLoaded", function() {
