--- a/dramaj_websiteportfolio/tale.html
+++ b/dramaj_websiteportfolio/tale.html
@@ -14,7 +14,7 @@
 <body>
     <p id="para1">Do you remember the first moments of your existence?</p>
     <p id="para2">No?</p>
-    <p id="para3">Listen to your tale; if you have heard that, abandon or commiserate me, as you shall judge that I deserve. But hear me.</p>
+    <p id="para3">Listen to your tale; if you have heard that, abandon or commiserate yourself, as you shall judge that you deserve. But hear yourself.</p>
 
     <div class="talelinks">
     <a id="link1" href="erschaffung_1.html">hear your tale</a>
@@ -26,27 +26,27 @@
         document.addEventListener("DOMContentLoaded", function() {
             setTimeout(function() {
                 document.getElementById("para1").style.opacity = 1;
-            }, 2000);
+            }, 1000);
 
             setTimeout(function() {
                 document.getElementById("para2").style.opacity = 1;
-            }, 9000);
+            }, 3000);
 
             setTimeout(function() {
                 document.getElementById("para3").style.opacity = 1;
-            }, 15000);
+            }, 5000);
 
             setTimeout(function() {
                 document.getElementById("link1").style.opacity = 1;
-            }, 18000);
+            }, 7000);
 
             setTimeout(function() {
                 document.getElementById("link2").style.opacity = 1;
-            }, 19000);
+            }, 8000);
 
             setTimeout(function() {
                 document.getElementById("link3").style.opacity = 1;
-            }, 20000);
+            }, 9000);
         });
     </script>
 </body>
