--- a/dramaj_websiteportfolio/erschaffung_2.html
+++ b/dramaj_websiteportfolio/erschaffung_2.html
@@ -11,7 +11,7 @@
         }
 
         .spaced {
-            padding: 50px;
+            padding-left: 50px;
         }
 
         #para8, #para9 {
@@ -36,16 +36,16 @@
 <script>
     document.addEventListener("DOMContentLoaded", function() {
         const elements = [
-            { id: "para1", delay: 2000 },
-            { id: "para2", delay: 4000 },
-            { id: "para3", delay: 6000 },
-            { id: "para4", delay: 8000 },
-            { id: "para5", delay: 10000 },
-            { id: "para6", delay: 12000 },
-            { id: "para7", delay: 22000 }, // 10 seconds after para6
-            { id: "para8", delay: 26000 },
-            { id: "para9", delay: 28000 },
-            { id: "awakeninglink", delay: 30000 }
+            { id: "para1", delay: 1000 },
+            { id: "para2", delay: 2000 },
+            { id: "para3", delay: 3000 },
+            { id: "para4", delay: 4000 },
+            { id: "para5", delay: 5000 },
+            { id: "para6", delay: 6000 },
+            { id: "para7", delay: 10000 }, // 10 seconds after para6
+            { id: "para8", delay: 12000 },
+            { id: "para9", delay: 13000 },
+            { id: "awakeninglink", delay: 14000 }
         ];
 
         elements.forEach((element) => {
